cmake_minimum_required(VERSION 3.14)
project(quickjs)
set(cmake_c_standard 89)
add_compile_definitions(CONFIG_VERSION="2019-07-21")
add_compile_definitions(CONFIG_BIGNUM)
set(QUICKJS_SOURCE quickjs/cutils.c quickjs/libbf.c quickjs/libregexp.c quickjs/libunicode.c quickjs/quickjs-libc.c quickjs/quickjs.c)
add_executable(qjsc quickjs/qjsc.c)
add_library(quickjs ${QUICKJS_SOURCE})
target_link_libraries(qjsc quickjs)